src/test/deca/syntax/valid/parser/sans-objet.deca
// Description:
//    Programme comportant des chaines de caractères imbriquées
//
// Resultats:
//    error car token sdfdgdbd n'existe pas
//
// Historique:
//    cree le 01/01/2022

{
    int x ;
    while( x < 2){
        x = readInt();
        println(0.5*(x*x));
    }
}
