src/test/deca/syntax/invalid/lexer/multi-string.deca
// Description:
//    Programme comportant des chaines de caractères imbriquées
//
// Resultats:
//    error car token sdfdgdbd n'existe pas
//
// Historique:
//    cree le 01/01/2022

"sdugidufhf"sdfsdgdbd"sdgsqgdsfqsfq"
